fix: resolve Spark configuration issues and eliminate test warnings
- Fix StackOverflowError in KMeansModel.predictWeighted() method
- Implement SharedSparkContext singleton to prevent multiple SparkContext conflicts
- Update deprecated spark.akka.frameSize to spark.rpc.message.maxSize
- Add comprehensive log4j2.properties to suppress test warnings
- Enable test forking with JVM options to handle reflective access warnings
- Configure BLAS fallback implementations to eliminate architecture warnings
- Optimize Spark test configurations for clean execution

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>